--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "EatShuffle",
-  "version": "0.1.0",
+  "name": "eat-shuffle",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
+    "start": "node server.js",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "express": "^4.16.2",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.13",
+    "vue-material": "^1.0.0-beta-7",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
