--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/googlemaps": "^3.30.7",
     "express": "^4.16.2",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.13",
