--- a/package.json
+++ b/package.json
@@ -6,23 +6,26 @@
     "start": "node server.js",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "npm run deploy:site && npm run deploy:functions",
+    "deploy:site": "firebase deploy --only hosting",
+    "deploy:functions": "firebase deploy --only functions"
   },
   "dependencies": {
-    "@types/googlemaps": "^3.30.7",
     "express": "^4.16.2",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.13",
     "vue-material": "^1.0.0-beta-7",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
+    "@types/googlemaps": "^3.30.7",
     "@vue/cli-plugin-babel": "^3.0.0-beta.6",
     "@vue/cli-plugin-eslint": "^3.0.0-beta.6",
     "@vue/cli-plugin-pwa": "^3.0.0-beta.6",
     "@vue/cli-service": "^3.0.0-beta.6",
     "@vue/eslint-config-airbnb": "^3.0.0-beta.6",
+    "firebase-tools": "^3.17.6",
     "vue-template-compiler": "^2.5.13"
   },
   "browserslist": [
