Update EatShuffle -> ShuffleEats

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "EatShuffle",
-  "short_name": "EatShuffle",
+  "name": "ShuffleEats",
+  "short_name": "ShuffleEats",
   "icons": [
     {
       "src": "/img/icons/android-chrome-192x192.png",
